--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,11 @@
 }
 html {
   height: 100%;
-  font-family: 'Lato', 'Arial', sans-serif;
+  font-family: 'Source Sans Pro', 'Lato', 'Arial', sans-serif;
   font-weight: 300;
   font-size: 20px;
   text-rendering: optimizeLegibility;
+  color: #e6e6e6;
 }
 .box {
   margin-top: 50px;
@@ -36,9 +37,41 @@ html {
   border:1px solid rgb(36, 34, 31);
 }
 
+.fadein-animation {
+    opacity:0;
+}
+
+/*----------------- Animacje wjeżdzania obrazków z lewej strony (projekty) --------------------- */
+.animation-element {
+  opacity: 0;
+  position: relative;
+}
+
+.animation-element.slide-left {
+  opacity: 0;
+  -moz-transition: all 500ms linear;
+  -webkit-transition: all 500ms linear;
+  -o-transition: all 500ms linear;
+  transition: all 500ms linear;
+  -moz-transform: translate3d(-100px, 0px, 0px);
+  -webkit-transform: translate3d(-100px, 0px, 0px);
+  -o-transform: translate(-100px, 0px);
+  -ms-transform: translate(-100px, 0px);
+  transform: translate3d(-100px, 0px, 0px);
+}
+
+.animation-element.slide-left.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
+}
 
 
-  
+
+
 
 .header {
   height: 100vh;
@@ -46,7 +79,7 @@ html {
 }
 
 .header h1 {
-  color: red;
+  color: #e6e6e6;
   text-align: center;
 }
 
@@ -81,21 +114,17 @@ html {
   margin: 0 auto 20px auto;
 }
 
+.gallery-img {
+  margin: 0 auto 20px auto;
+}
+
 
 .gallery, .about, .projects h2 {
   margin-top: 0;
   padding-top: 10px;
   text-align: center;
-  color: red;
+  color: #111;
 }
-
-.about, .projects p {
-  color: red;
-  font-weight: 300;
-  letter-spacing: 2px;
-}
-
-
 
 
 
@@ -103,9 +132,14 @@ html {
   height: 40vh;
   width: 100%;
   background: url('img/background.jpg') no-repeat center top fixed;
+  color: #e6e6e6;
 }
 
-
+.about p {
+  color: #e6e6e6;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
 
 
 
@@ -113,12 +147,27 @@ html {
   min-height: 100vh;
   height: 100%;
   width: 100%;
-  background-color: #f2f2f2;
+  background-color: #a2a2a2;
+  
   text-align: center;
 }
 
+.projects p {
+  color: #111;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
 .projects-gallery {
-  margin: 40px auto;
+  margin: 5% auto;
+  font-size: 14px;
+  
+}
+.projects-img {
+  margin: 20px auto;
+}
+.projects-information p {
+  margin: 50px auto;
 }
 
 .footer {
@@ -157,5 +206,34 @@ display: inline-block;
     margin: 20px auto;
     text-align: center;
   }
+
+  .projects-information p {
+    margin: 20px 40px;
+  }
   
 }
+
+
+
+/* @media screen and (max-width: 678px){
+  testimonials
+  .animation-element.slide-left.testimonial,
+  .animation-element.slide-left.testimonial:nth-of-type(odd),
+  .animation-element.slide-left.testimonial:nth-of-type(even){
+    width: 100%;
+    margin: 0px 0px 20px 0px;
+  }
+  .animation-element.slide-left.testimonial .right,
+  .animation-element.slide-left.testimonial .left,
+  .animation-element.slide-left.testimonial .content,
+  .animation-element.slide-left.testimonial .rating{
+    text-align: center;
+    float: none;
+  }
+  .animation-element.slide-left.testimonial img{
+    width: 85px;
+    height: 85px;
+    margin-bottom: 5px;
+  }
+  
+} */
