--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,6 @@ html {
   transform: translate3d(0px, 0px, 0px);
 }
 
-
-
-
-
 .header {
   height: 100vh;
   width: 100%;
@@ -81,27 +77,29 @@ html {
 .header h1 {
   color: #e6e6e6;
   text-align: center;
+  font-weight: 300;
+  letter-spacing: 2px;
 }
 
 .background-img {
   overflow: hidden;
   position: relative;
 }
-  .background-img::before {
-    content: ' ';
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: url('img/background.jpg') no-repeat center top fixed;
-    background-size: cover;
-    z-index: -1;
+.background-img::before {
+  content: ' ';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: url('img/background.jpg') no-repeat center top fixed;
+  background-size: cover;
+  z-index: -1;
 }
-
 
 .box {
   text-align: center;
   margin: 0;
 }
+
 .gallery {
   min-height: 100vh;
   height: 100%;
@@ -114,19 +112,20 @@ html {
   margin: 0 auto 20px auto;
 }
 
-.gallery-img {
-  margin: 0 auto 20px auto;
+.gallery p {
+  margin: 10px auto 30px auto;
+  font-weight: 300;
+  letter-spacing: 2px;
 }
-
 
 .gallery, .about, .projects h2 {
   margin-top: 0;
   padding-top: 10px;
   text-align: center;
   color: #111;
+  font-weight: 300;
+  letter-spacing: 2px;
 }
-
-
 
 .about {
   height: 40vh;
@@ -139,17 +138,19 @@ html {
   color: #e6e6e6;
   font-weight: 300;
   letter-spacing: 2px;
+  margin-top: 20px;
 }
-
-
 
 .projects {
   min-height: 100vh;
   height: 100%;
   width: 100%;
   background-color: #a2a2a2;
-  
   text-align: center;
+}
+
+.projects h2 {
+  padding-top: 30px;
 }
 
 .projects p {
@@ -161,11 +162,12 @@ html {
 .projects-gallery {
   margin: 5% auto;
   font-size: 14px;
-  
 }
+
 .projects-img {
   margin: 20px auto;
 }
+
 .projects-information p {
   margin: 50px auto;
 }
@@ -177,24 +179,34 @@ html {
   text-align: center;
 }
 
-.footer p {
-  color: rgba(255, 255, 255, 0.692);
-}
-
 .footer-icons {
   margin-top: 40px;
   list-style: none;
 }
+
 .icons {
-margin-right: 10px;
-display: inline-block;
+  margin-right: 10px;
+  display: inline-block;
 }
 
+.footer p {
+  color: rgba(255, 255, 255, 0.692);
+}
+
+
 @media (max-width: 767px) { 
+  .header h1{
+    margin-top: 70%;
+  }
+
+  .about p {
+    margin-top: 10px;
+    font-size: 2.5vw;
+  }
+
   .projects-gallery {
     display: flex;
     flex-direction: column;
-    
   }
 
   .projects-gallery-reverse {
@@ -210,7 +222,6 @@ display: inline-block;
   .projects-information p {
     margin: 20px 40px;
   }
-  
 }
 
 
@@ -237,3 +248,86 @@ display: inline-block;
   }
   
 } */
+
+.header h1{
+  margin-top: 250px;
+  font-size: 54px;
+}
+
+
+.header p{
+  color: #fff;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.menu {
+  width: 230px;
+  opacity: 0.8;
+  background-color: black;
+  position: fixed;
+  height: 100vh;
+  z-index: 1;
+  color: #fff;
+  transition: all .75s ease;
+}
+
+.menu.menu-hide {
+  opacity: 0;
+}
+
+
+.menu li {
+  text-align: center;
+  margin-top: 50px;
+}
+
+#hamburger-1 {
+  z-index: 2;
+  margin: 10px;
+  position: fixed;
+}
+
+.row .three{
+  padding: 80px 30px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #2c3e50;
+  color: #ecf0f1;
+}
+
+.hamburger .line{
+  width: 30px;
+  height: 3px;
+  background-color: #ecf0f1;
+  display: block;
+  margin: 8px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover{
+  cursor: pointer;
+}
+
+#hamburger-1.is-active .line:nth-child(2){
+  opacity: 0;
+}
+
+#hamburger-1.is-active .line:nth-child(1){
+  -webkit-transform: translateY(13px) rotate(45deg);
+  -ms-transform: translateY(13px) rotate(45deg);
+  -o-transform: translateY(13px) rotate(45deg);
+  transform: translateY(13px) rotate(45deg);
+}
+
+#hamburger-1.is-active .line:nth-child(3){
+  -webkit-transform: translateY(-13px) rotate(-45deg);
+  -ms-transform: translateY(-13px) rotate(-45deg);
+  -o-transform: translateY(-13px) rotate(-45deg);
+  transform: translateY(-13px) rotate(-45deg);
+}
